# Video-DS-and-ML

./: .gitignore  README.md  pyproject.toml
Data Analysis with OpenCV/: basic_analysis_of_video.ipynb
Deep Learning with Pytorch/rise/: rise.py
Deep Learning with Pytorch/rise/rise_utils/: aggregator.py  common.py  mask_generator.py  mask_processor.py  utils.py
Deep Learning with Pytorch/sketch_model/: app.py
Feature Engineering/: image_engineering.ipynb
data/: video_emotion_sample.csv
