[project]
name = "video-ds-and-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.21.0",
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers[torch]>=4.48.2",
]
